# modeling_MIPT

./: .gitignore
term1/wk01/: 12.cpp  6.cpp  9.cpp
term1/wk02/: ex1.py  ex2.py
term1/wk05/: ex4.cpp
term1/wk07/: model.cpp
term1/wk08/: model.cpp
term1/wk10/: report.ipynb
term1/wk11/: model.cpp  physics.h  report.ipynb
term1/wk12/: Makefile  animation.py  function.h  main.cpp  report.ipynb  solver.h
term1/wk14/: function.cpp  function.h  report.ipynb  solver.cpp
term2/wk01/: task1.cpp  task2.cpp  task3.cpp
term2/wk02/: report.ipynb
term2/wk03-04/: report.ipynb  simple_walk.cpp
term2/wk05/: Makefile  config_example.json  gas1D.hpp  log.hpp  main.cpp  report.ipynb
term2/wk07/: engine.cpp  (+1 more)
term2/wk08/RayTracing/: CMakeLists.txt  RayTracing.h  ray.cpp  ray.h  space.cpp  space.h
term2/wk08/RayTracing/include/: MF.h  geometry.h  mirror.h  object.h  physics.h  point.h  ray.h  screen.h  space.h
term2/wk08/RayTracing/src/: geometry.cpp  mirror.cpp  physics.cpp  point.cpp  ray.cpp  screen.cpp  space.cpp
wk01/: 11.cpp  4.cpp  5.cpp  7.cpp  8.cpp
wk02/: ex3.py
wk07/: report.ipynb
wk09/: report.ipynb
wk1/: 10.cpp  3.cpp  output.txt
wk10/: model.cpp  model_class.py
wk12/: animation.py  function.cpp  report.ipynb  solving_methods.h
wk14/: Makefile  function.cpp  main.cpp  report.ipynb
wk2/: ex1.py
wk3/: fluct.cpp  gr.ipynb  model.cpp  report.ipynb
wk4/: config_file.json  model.cpp  report.ipynb
wk5/: ex1.cpp  ex2.cpp  ex4.cpp  ex5.cpp  ex6.ipynb  report.ipynb
wk7/: model.cpp  report.ipynb
wk8/: report.ipynb
wk9/: model.cpp
(+16 files in other folders)
